first attempt at adding registration page. Still showing null errors. not fully working.

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -16,7 +16,12 @@
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Sign Out"/>
         </form>
-
+        
+     
+        <div>   
+           <h2> Visit <a th:href="@{/about}">About page</a></h2>
+            <h2> Visit <a th:href="@{/home}">Home page</a></h2>
+        </div>
     </div>
 
 </div>
