--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+     <title>KYC Buddy</title>
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
@@ -9,10 +10,13 @@
 
 <div class="container">
 
-    <div class="starter-template">
-        <h1>Normal page (No need login)</h1>
-    </div>
 
+<div class="starter-template">
+        <h1>KYC Buddy</h1>
+        <h2>1. Visit <a th:href="@{/admin}">Admin login page (Spring Security protected, Need Admin Role)</a></h2>
+        <h2>2. Visit <a th:href="@{/user}">User login page (Spring Security protected, Need User Role)</a></h2>
+        <h2>3. Visit <a th:href="@{/about}">About page</a></h2>
+    </div>
 </div>
 <!-- /.container -->
 
