--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+     <title>KYC Buddy</title>
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
@@ -17,6 +18,13 @@
             <input type="submit" value="Sign Out"/>
         </form>
 
+        
+            
+            
+        <div>
+           <h2> Visit <a th:href="@{/about}">About page</a></h2>
+            <h2> Visit <a th:href="@{/home}">Home page</a></h2>
+        </div>
     </div>
 
 </div>
