--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -67,7 +67,7 @@
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-user"></span>
           </span>
-          <input type="text" th:field="*{password}"
+          <input type="password" th:field="*{password}"
             placeholder="password" class="form-control" required />
           <span class="glyphicon form-control-feedback"
             aria-hidden="true"></span>
