pages mostly linking. Removed person files.

--- a/src/main/resources/Static/css/main.css
+++ b/src/main/resources/Static/css/main.css
@@ -1,9 +1,14 @@
+body {
+    background-color: powderblue;
+}
+
+
 h1{
-	color:#0000FF;
+	color:#CEF6F5;
 }
 
 h2{
-	color:#FF0000;
+	color:#0404B4;
 }
 
 footer{
