--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,13 +12,14 @@
 
 <div class="container">
 
-    <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf + Spring Security</h1>
-        <h2>1. Visit <a th:href="@{/admin}">Admin login page (Spring Security protected, Need Admin Role)</a></h2>
-        <h2>2. Visit <a th:href="@{/user}">User login page (Spring Security protected, Need User Role)</a></h2>
-        <h2>3. Visit <a th:href="@{/about}">About page</a></h2>
-    </div>
 
+    <div class="template">
+       
+        <h2>KYC buddy home page......</h2>
+            <h2>about what kyc buddy is.................................</h2>
+        <h2>All the information </h2>
+    </div>
+</div>
 </div>
 <!-- /.container -->
 
