--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -3,6 +3,7 @@
 <head>
      <title>KYC Buddy</title>
     <div th:replace="fragments/header :: header-css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -10,12 +11,12 @@
 
 <div class="container">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<div class="starter-template">
+<div class="template">
         <h1>KYC Buddy</h1>
-        <h2>1. Visit <a th:href="@{/admin}">Admin login page (Spring Security protected, Need Admin Role)</a></h2>
-        <h2>2. Visit <a th:href="@{/user}">User login page (Spring Security protected, Need User Role)</a></h2>
-        <h2>3. Visit <a th:href="@{/about}">About page</a></h2>
+        <h2>Information about what kyc buddy is.................................</h2>
+        <h2>All the information </h2>
     </div>
 </div>
 <!-- /.container -->
