--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -17,13 +17,10 @@
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Sign Out"/>
         </form>
-
-        
-            
+           
             
         <div>
-           <h2> Visit <a th:href="@{/about}">About page</a></h2>
-            <h2> Visit <a th:href="@{/home}">Home page</a></h2>
+           <h2> Visit <a th:href="@{/myclients}"> MyClients</a></h2>
         </div>
     </div>
 
