--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -17,23 +17,49 @@ and open the template in the editor.
         <link rel="stylesheet" th:href="@{/css/main.css}"
               href="../../css/main.css" />
     </div>
+
 </head>
 <body>
 <div th:fragment="header">
     <!-- this is header -->
-    <nav class="navbar navbar-inverse">
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" th:href="@{/}">Spring Boot</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
+                     <a class="navbar-brand" th:href="@{/}">KYC Buddy</a>
+
+             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>              
+                <meta name="viewport" content="width=device-width, initial-scale=1">
+
                 <ul class="nav navbar-nav">
-                    <li class="active"><a th:href="@{/}">Home</a></li>
-                </ul>
+
+                    <li th:classappend="${module == 'home' ? 'active' : ''}">
+                        <a href="#" th:href="@{/}">Home</a>
+                    </li>
+                    <li th:classappend="${module == 'about' ? 'active' : ''}">
+                        <a href="#" th:href="@{/about}">about</a>
+                    </li>
+                    <li th:classappend="${module == 'login' ? 'active' : ''}">
+                        <a href="#" th:href="@{/user}"> User Login</a>
+                    <li th:classappend="${module == 'about' ? 'active' : ''}">
+                        <a href="#" th:href="@{/admin}">Admin Login</a>
+                    </li>
+                    <li th:classappend="${module == 'register' ? 'active' : ''}">
+                        <a href="#" th:href="@{/register}">Register</a>
+
+                    </li>
+                    </li>
+            
+          </ul>
+                    </div>
+                  
             </div>
         </div>
-    </nav>
-</div>
-
+   
 </body>
 </html>
