--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,8 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
 >
 <head>
-    <title>Spring Security Example </title>
+    <title>KYC Buddy</title>
     <div th:replace="fragments/header :: header-css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
