--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,12 +3,7 @@
   xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="User account registration" />
-  <meta name="author" content="Amir Boroumand" />
-  <link rel="icon" href="favicon.ico" />
+ 
 
   <title>Registration Page</title>
 
@@ -93,7 +88,11 @@
   <!-- Bootstrap Validator plugin -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
 
- 
+  <div>
+                             <h2> Return to Home page <a th:href="@{/home}">  here </a></h2>
+
+      
+  </div>
 </body>
 
 </html>
