--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,8 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
      <title>KYC Buddy</title>
-    <div th:replace="fragments/header :: header-css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+     <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
 
