--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,14 +32,14 @@ and open the template in the editor.
             <div class="navbar-header">
                      <a class="navbar-brand" th:href="@{/}">KYC Buddy</a>
 
-             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>              
                 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav mr-auto">
 
                     <li th:classappend="${module == 'home' ? 'active' : ''}">
                         <a href="#" th:href="@{/}">Home</a>
@@ -63,6 +63,6 @@ and open the template in the editor.
                   
             </div>
         </div>
-   
+</nav>
 </body>
 </html>
