--- a/src/main/resources/templates/clientadded.html
+++ b/src/main/resources/templates/clientadded.html
@@ -2,14 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
      <title>KYC Buddy</title>
-    <div th:replace="fragments/header :: header-css"/>
+     <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+      <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
-    <body>
-        <div> A new client has now been added</div>
+
+<div th:replace="fragments/header :: header"/>
+        <div> <h1>A new client has now been added</h1></div>
         <div> 
                  <h2> Return to your Clients list  <a th:href="@{/myclients}"> MyClients </a></h2>
         </div>
-
     </body>
 </html>
