--- a/src/main/resources/templates/myclients.html
+++ b/src/main/resources/templates/myclients.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <div th:replace="fragments/header :: header-css"/>
-href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
@@ -35,7 +35,7 @@ href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
             </table>
  </div>
 <div>
-    <form th:action="@{/addclient}" method="post">
+    <form th:action="@{/addclient}" method="get">
             <input type="submit" value="Add New Client"/>
         </form>  
 </div>
