--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -21,6 +21,9 @@
 	<link th:href="@{css/fv.css}" rel="stylesheet" />	
 </head>
 
+<div th:replace="fragments/header :: header"/>
+
+
 <body class="gray-bg">
 
   <div class="middle-box text-center loginscreen animated fadeInDown">
