--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -5,6 +5,9 @@
     <div th:replace="fragments/header :: header-css"/>
 </head>
 <body>
+
+<div th:replace="fragments/header :: header"/>
+
     <body>
         <div> You have registered</div>
         <div> 
