--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
   xmlns:th="http://www.thymeleaf.org">
+    
+    <head>
+    <title>KYC Buddy</title>
 
-<head>
+    <div th:replace="fragments/header :: header-css"/>
+
+</head>
+<body>
+
+<div th:replace="fragments/header :: header"/>
+
+
  
 
   <title>Registration Page</title>
@@ -15,7 +25,7 @@
   <!-- where to get this? -->
 
   <link th:href="@{css/style.css}" rel="stylesheet" />
-</head>
+
 
 <body class="gray-bg">
 
