--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -9,8 +9,9 @@
 <div th:replace="fragments/header :: header"/>
 
     <body>
-        <div> You have registered</div>
+        <div> <h1>Success! You have registered a new user</h1></div>
         <div> 
+            <h2> As a new user you may add new clients to the database </h2>
                  <h2> Now you can sign in as a User!  <a th:href="@{/login}"> Login </a></h2>
         </div>
 
