--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,7 +3,7 @@
   xmlns:th="http://www.thymeleaf.org">
     
     <head>
-    <title>KYC Buddy</title>
+    <title>KYC Buddy Registration</title>
 
     <div th:replace="fragments/header :: header-css"/>
 
@@ -12,22 +12,9 @@
 
 <div th:replace="fragments/header :: header"/>
 
-
- 
-
-  <title>Registration Page</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-  crossorigin="anonymous" />
-  <!-- where to get this? -->
-
   <link th:href="@{css/style.css}" rel="stylesheet" />
 
-
-<body class="gray-bg">
+<body>
 
   <div class="middle-box text-center loginscreen animated fadeInDown">
     <div>
@@ -86,23 +73,6 @@
     </div>
   </div>
 
- <!-- jQuery-->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    
-  <!-- Bootstrap -->
-  <script
-    src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-    integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-    crossorigin="anonymous"></script>
-
-  <!-- Bootstrap Validator plugin -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
-
-  <div>
-                             <h2> Return to Home page <a th:href="@{/home}">  here </a></h2>
-
-      
-  </div>
-</body>
+  </body>
 
 </html>
