--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,29 +1,18 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>KYC Buddy</title>
-
-    <div th:replace="fragments/header :: header-css"/>
-
-</head>
-<body>
-
-<div th:replace="fragments/header :: header"/>
-
-<div class="container">
-
-
-    <div class="template">
-       
-        <h2>KYC buddy home page......</h2>
-            <h2>about what kyc buddy is.................................</h2>
-        <h2>All the information </h2>
-    </div>
-</div>
-</div>
-<!-- /.container -->s
-
-<div th:replace="fragments/footer :: footer"/>
-
-</body>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <title>KYC Buddy</title>
+        <div th:replace="fragments/header :: header-css"/>
+    </head>
+    <body>
+        <div th:replace="fragments/header :: header"/>
+        <div class="container">
+            <div class="template"> 
+                <h2>KYC buddy home page......</h2>
+                <h2>about what kyc buddy is.................................</h2>
+                <h2>All the information </h2>
+            </div>
+        </div>
+        <div th:replace="fragments/footer :: footer"/>
+    </body>
 </html>
