--- a/src/main/resources/templates/clientadded.html
+++ b/src/main/resources/templates/clientadded.html
@@ -1,28 +1,24 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
-     <title>KYC Buddy</title>
-     <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-      <div th:replace="fragments/header :: header-css"/>
-</head>
-<body>
-
-<div th:replace="fragments/header :: header"/>
-<div> <h1>A new client has now been added</h1></div>
-    <div> 
-        <h2> Choose an option below </h2>
-        <form th:action="@{/addclient}" method="get">
-            <input type="submit" value="Add Another Client"/>
-        </form>  
-        <form th:action="@{/myclients}" method="get">
-            <input type="submit" value="My Clients List"/>
-        </form>  
-        <form th:action="@{/logout}" method="post">
-            <input type="submit" value="Sign Out"/>
-        </form>  
-    </div>
-
-</div>
-      </body>
-      </html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <title>KYC Buddy</title>
+        <div th:replace="fragments/header :: header-css"/>
+    </head>
+    <body>
+        <div th:replace="fragments/header :: header"/>
+        <div> <h1>A new client has now been added</h1></div>
+        <div> 
+            <h2> Choose an option below </h2>
+            <form th:action="@{/addclient}" method="get">
+                <input type="submit" value="Add Another Client"/>
+            </form>  
+            <form th:action="@{/myclients}" method="get">
+                <input type="submit" value="My Clients List"/>
+            </form>  
+            <form th:action="@{/logout}" method="post">
+                <input type="submit" value="Sign Out"/>
+            </form>  
+        </div>
+        <div th:replace="fragments/footer :: footer"/>
+    </body>
+</html>
