--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,19 +1,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" 
-	  xmlns:th="http://www.thymeleaf.org"
+      xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-</head>
-<body>
-<div th:fragment="footer">
-
-    <div class="container">
-
-        <footer>
-        
-        <script type="text/javascript"
-                src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        </footer>
-    </div>
-</div>
-</body>
+    <head>
+    </head>
+    <body>
+        <div th:fragment="footer">
+            <div class="container">
+                <footer>
+                    <script src="/webjars/jquery/3.3.1/jquery.min.js"></script>
+                    <script type="text/javascript" src="webjars/bootstrap/4.1.2/js/bootstrap.min.js"></script>
+                </footer>
+            </div>
+        </div>
+    </body>
 </html>
