--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,78 +1,66 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-  xmlns:th="http://www.thymeleaf.org">
-    
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
     <head>
-    <title>KYC Buddy Registration</title>
+        <title>KYC Buddy</title>
+        <div th:replace="fragments/header :: header-css"/>
+    </head>
+    <body>
+        <div th:replace="fragments/header :: header"/>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
+                    <h1>New User Registration</h1>
+                    <form autocomplete="off" action="#" th:action="@{/register}"
+                          th:object="${user}" method="post" class="m-t" role="form"
+                          data-toggle="validator">
 
-    <div th:replace="fragments/header :: header-css"/>
+                        <div th:if="${confirmationMessage}" class="alert alert-success"
+                             role="alert" th:text=${confirmationMessage}></div>
 
-</head>
-<body>
+                        <div th:if="${errorMessage}"
+                             class="alert alert-danger" role="alert"
+                             th:text="${errorMessage}"></div>
 
-<div th:replace="fragments/header :: header"/>
+                        <div th:if="${#fields.hasErrors('username')}"
+                             th:errors="*{username}"
+                             class="validation-message alert alert-danger" role="alert"></div>
 
-  <link th:href="@{css/style.css}" rel="stylesheet" />
-
-<body>
-
-  <div class="middle-box text-center loginscreen animated fadeInDown">
-    <div>
-      
-      <h4>New User Registration</h4>
-
-      <form autocomplete="off" action="#" th:action="@{/register}"
-        th:object="${user}" method="post" class="m-t" role="form"
-        data-toggle="validator">
-
-        <div th:if="${confirmationMessage}" class="alert alert-success"
-          role="alert" th:text=${confirmationMessage}></div>
-
-        <div th:if="${errorMessage}"
-          class="alert alert-danger" role="alert"
-          th:text="${errorMessage}"></div>
-
-
-        <div th:if="${#fields.hasErrors('username')}"
-          th:errors="*{username}"
-          class="validation-message alert alert-danger" role="alert"></div>
-
-        <div th:if="${#fields.hasErrors('password')}"
-          th:errors="*{password}"
-          class="validation-message alert alert-danger" role="alert"></div>
+                        <div th:if="${#fields.hasErrors('password')}"
+                             th:errors="*{password}"
+                             class="validation-message alert alert-danger" role="alert"></div>
 
 
-        <div class="form-group input-group has-feedback">
-          <label th:if="${#fields.hasErrors('username')}"
-            th:errors="*{username}" class="validation-message"></label>
-          <span class="input-group-addon">
-            <span class="glyphicon glyphicon-user"></span>
-          </span>
-          
-          <input type="text" th:field="*{username}"
-            placeholder="username" class="form-control" required />
-          <span class="glyphicon form-control-feedback"
-            aria-hidden="true"></span>
+                        <div class="form-group input-group has-feedback">
+                            <label th:if="${#fields.hasErrors('username')}"
+                                   th:errors="*{username}" class="validation-message"></label>
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-user"></span>
+                            </span>
+
+                            <input type="text" th:field="*{username}"
+                                   placeholder="User Name" class="form-control" required />
+                            <span class="glyphicon form-control-feedback"
+                                  aria-hidden="true"></span>
+                        </div>
+
+                        <div class="form-group input-group has-feedback">
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-user"></span>
+                            </span>
+                            <input type="password" th:field="*{password}"
+                                   placeholder="Password" class="form-control" required />
+                            <span class="glyphicon form-control-feedback"
+                                  aria-hidden="true"></span>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-6 col-sm-6 col-md-6">
+                                <button type="submit" class="btn btn-lg btn-primary btn-block ">Register</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-
-        <div class="form-group input-group has-feedback">
-          <span class="input-group-addon">
-            <span class="glyphicon glyphicon-user"></span>
-          </span>
-          <input type="password" th:field="*{password}"
-            placeholder="password" class="form-control" required />
-          <span class="glyphicon form-control-feedback"
-            aria-hidden="true"></span>
-        </div>
-
-        <button type="submit"
-          class="btn btn-primary block full-width m-b">Register</button>
-
-      </form>
-     
-    </div>
-  </div>
-
-  </body>
-
+        <div th:replace="fragments/footer :: footer"/>
+    </body>
 </html>
