addition of text to pages.

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,10 +8,13 @@
         <div th:replace="fragments/header :: header"/>
         <div class="container">
             <div class="template"> 
-                <h2>KYC buddy home page......</h2>
-                <h2>about what kyc buddy is.................................</h2>
-                <h2>All the information </h2>
-            </div>
+                <h1>Welcome to KYC Buddy!</h1>
+                <h2>What is KYC Buddy?</h2>
+                <h3>The Know Your Client/Customer Buddy has been set up by professionals with a working background and knowledge of Anti-Money Laundering (AML) 
+                    rules and regulations within financial services and law firms. 
+                    It is a useful tool for those working within AML and Compliance roles to assist with AML requirements.
+                    Users can log on to add new clients, upload files of the required documentation and keep up to date with the standard requirements.</h3>
+              </div>
         </div>
         <div th:replace="fragments/footer :: footer"/>
     </body>
