--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-xs-12 col-sm-8 col-md-6">
+                <div class="col-xs-12 col-sm-8 col-md-6 mx-auto">
                     <form th:action="@{/login}" method="post">
                         <fieldset>
                             <h1>Please Sign In</h1>
